--- a/public/sass/faulhaber-blog-public.sass
+++ b/public/sass/faulhaber-blog-public.sass
@@ -9,13 +9,14 @@
 .fb-grid
   .fb-filters
     display: flex
-    justify-content: space-between
+    flex-wrap: wrap
+    justify-content: flex-start
     align-items: center
-    margin-bottom: 30px
+    margin-bottom: 20px
     &-buttons
       position: relative
       display: inline-block
-      margin: 5px 3px
+      margin: 5px 3px 10px 3px
       padding: 0px 12px
       font-size: 18px
       font-weight: 200
