--- a/public/sass/faulhaber-blog-public.sass
+++ b/public/sass/faulhaber-blog-public.sass
@@ -214,3 +214,9 @@
     box-shadow: 10014px 0 0 2px
   60%, 100%
     box-shadow: 10014px 0 0 -5px
+
+
+@media ( max-width: 768px )
+  .fb-grid
+    .fb-stage
+      align-items: flex-start
